# jcath

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
jcatch/: __init__.py  main.py
jcatch/core/: __init__.py  models.py  nfo.py  processor.py
jcatch/scrapers/: __init__.py  base.py  decorator.py  fanart_decorator.py  jav321.py  javbus.py  javwine.py  missavws.py  poster_decorator.py  www324jav.py
jcatch/scrapers/decorators/: __init__.py  base_decorator.py  fanart_decorator.py  metadata_decorator.py  poster_decorator.py
jcatch/utils/: __init__.py  download.py  downloader.py  file.py  logging_config.py
tests/: __init__.py  test_file_utils.py  test_models.py  test_nfo.py  test_processor.py
